widget_form_image.html added to minimize code repetition

--- a/kooplexhub/container/templates/container_configure.html
+++ b/kooplexhub/container/templates/container_configure.html
@@ -50,28 +50,7 @@
   
     <div class="tab-content" id="serviceConfigTabContent">
       <div class="tab-pane fade {% if active == "meta" %}show active{% endif %}" id="meta" role="tabpanel" aria-labelledby="tab-meta">
-        <div class="container-fluid">
-          <div class="row row-cols-1 row-cols-md-2">
-            <div class="col">
-              <table>
-                {{ form.as_table }}
-              </table>
-            </div>
-            <div class="col"> {# hide if small #}
-              <div data-toggle="tooltip" title="Please select an option from the image dropdown to check its description." class="bg-warning rounded p-2 w-100 mt-2 mt-md-0">
-                <p class="fw-bolder">Image description:&nbsp;</p>
-                <p id="imageDescription"></p>
-		<div class="clearfix"><img id="imageThumbnail" class="float-end" alt=""></div>
-                {{ form.descriptions }}
-              </div>
-            </div>
-          </div>
-          <div class="row row-cols-1 p-2">
-            <div class="progress d-none" id="busybar" role="progressbar" aria-label="Animated striped example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-              <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" style="width: 100%">Retrieving cluster information...</div>
-            </div>
-          </div>
-        </div>
+        {% include 'widget_form_image.html' %}
       </div>
   
   {% if app_project_installed %}
@@ -134,22 +113,6 @@ $("#container-manage").submit(function (e) {
 });
 
 containerSocket = open_ws('{{ wss_container }}', ws_callback);
-
-{# when image selection changes, display the details in info panel #}
-$("select[name='image']").change(function() {
-  $( "select[name='image'] option:selected" ).each(function() {
-    id = $(this).attr("value");
-    console.log( $( this ).text() + " -> " + id);
-    if (id === "") {
-      $("#imageDescription").text("");
-    } else {
-       description = $("#image-description-" + id).attr("value");
-       $("#imageDescription").text(description);
-       tn = $("#image-thumbnail-" + id).attr("value");
-       $("#imageThumbnail").attr("src", tn);
-    }
-  });
-}).change();
 
 {# handle websocket callback #}
 function ws_callback(data) {
