--- a/kooplexhub/project/templates/project_configure.html
+++ b/kooplexhub/project/templates/project_configure.html
@@ -36,23 +36,7 @@
     </ul>
     <div class="tab-content mt-3" id="projectConfigTabsContent">
       <div class="tab-pane fade {% if active == "meta" %}show active{% endif %}" id="meta" role="tabpanel" aria-labelledby="tab-meta">
-        <div class="container-fluid">
-          <div class="row row-cols-1 row-cols-md-2">
-  	  <div class="col">
-              <table>
-                {{ form.as_table }}
-              </table>
-            </div>
-  	  <div class="col"> {# hide if small #}
-              <div data-toggle="tooltip" title="Please select an option from the image dropdown to check its description." class="bg-warning rounded p-2 w-100 mt-2 mt-md-0">
-                <p class="fw-bolder">Image description:&nbsp;</p>
-                <p id="imageDescription"></p>
-		<div class="clearfix"><img id="imageThumbnail" class="float-end" alt=""></div>
-                {{ form.descriptions }}
-              </div>
-            </div>
-          </div>
-        </div>
+        {% include 'widget_form_image.html' %}
       </div>
       <div class="tab-pane fade {% if active == "collaboration" %}show active{% endif %}" id="collaboration" role="tabpanel" aria-labelledby="tab-collaboration">
         <div class="container-fluid">
@@ -96,26 +80,16 @@
 
 {% block scripts %}
 <script> 
+{# FIXME: name could be guessed from form field #}
+{# when image selection changes, render appropriate image descriptions #}
+$("select[name='preferred_image']").change(function() {
+  image_selection_changed('preferred_image');
+}).change();
+
 {# check if widget belongs to collaborator table #}
 function tc(obj, levels = 5) {
   return $(obj).parents().eq(levels).attr('id') === 'collaborators';
 }
-
-{# when image selection changes, render appropriate image descriptions #}
-$("select[name='preferred_image']").change(function() {
-  $( "#id_preferred_image option:selected" ).each(function() {
-    id = $(this).attr("value");
-    if (id === "") {
-      $("#imageDescription").text("");
-      $("#imageThumbnail").attr("src", "");
-    } else {
-      description = $("#image-description-" + id).attr("value");
-      $("#imageDescription").text(description);
-      tn = $("#image-thumbnail-" + id).attr("value");
-      $("#imageThumbnail").attr("src", tn);
-    }
-  });
-}).change();
 
 {# catch submit event, in order to fill properly the share volume information #}
 $("#project-manage").submit(function (e) {
