--- a/kooplexhub/education/templates/assignment.html
+++ b/kooplexhub/education/templates/assignment.html
@@ -32,9 +32,8 @@
 </style>
 {% endblock %}
 
-
-{% block realcontent %}
-<ul class="nav nav-tabs  mb-2 mt-3" id="assignmentTeacherTabs" role="tablist">
+{% block bodycontent %}
+  <ul class="nav nav-tabs  mb-2 mt-3" id="assignmentTeacherTabs" role="tablist">
   <li class="nav-item" role="presentation">
     {% if active == "new" %}
     <a class="nav-link mytab active" id="tab-new" href="#" type="button" role="tab" aria-controls="newAssignment" aria-selected="true">New Assignment</a>
@@ -94,7 +93,7 @@
       </div>
     </div>
     {% else %}
-        {% include 'empty.html' with empty_body='You have not filled in the scores for your assignments.' skip_border=True %}
+        {% include 'empty.html' with empty_body='<p class="text-light">You have not filled in the scores for your assignments.</p>' skip_border=True %}
     {% endif %}
     <form id='student-grade' class="mb-3 mt-3">
       <input type="hidden" name="assignment" value="{{assignment_id}}" >
