--- a/kooplexhub/education/templates/assignment_configure.html
+++ b/kooplexhub/education/templates/assignment_configure.html
@@ -19,53 +19,53 @@
 
 {% block assignment_content %}
 <div class="tab-pane fade {% if active == "conf" %}show active{% endif %}" id="confAssignment" role="tabpanel" aria-labelledby="tab-conf">
-  <div class="mt-3">
-    <form id='assignment-form-configure' class="mt-3" action="{% url 'education:assignment_configure_save' %}" method="post">
+  {% if form.okay %}
+    <form id='assignment-form-configure' class="was-validated" action="{% url 'education:assignment_configure' %}" method="post">
       {% csrf_token %}
-      {% if t_assignment_config.data|length > 0 %}
         {% apply_cancel with icon_apply="bi bi-save" %}
-      {%endif %}
-      <input class="form-control mb-3 mt-3" type="text" id="search_configure" placeholder="Search course or assignment" title="Type in a name">
+      <input class="form-control mb-3 mt-3" type="text" id="search_assignment" placeholder="Search course or assignment" title="Type in a name">
+      <table>{{ form.as_table }}</table>
       <div>
-        {% render_table t_assignment_config %}
+        {% render_table form.t_assignments %}
       </div>
     </form>
-  </div>
+  {% else %}
+  FIXME: empty
+  {%endif %}
 </div>
 {% endblock %}
 
 {% block child_scripts %}
 <script>
-$("#search_configure").keyup(function() {
-  var pattern = $( this ).val().toUpperCase();
-  console.log( "search config: " + pattern );
-  $( "#assignment-form-configure" ).find('tr').each(function() {
-    if ( $( this ).parent().is("thead") ) {
-      return;
+function my_filter(obj, obj_id) {
+  obj_val = $("#" + obj + "-" + obj_id).val();
+  old_val = $("#" + obj + "-old-" + obj_id).val();
+  if ((obj_val !== undefined) && (obj_val.length > 0) && (obj_val != old_val)) {
+    return { "attribute": obj, "value": obj_val };
+  }
+}
+{# catch submit event, in order to see what is changed #}
+$("#assignment-form-configure").submit(function (e) {
+  changes = Array();
+  $("input[name^=name-old-]").each(function() {
+    aid = $( this ).attr('id').split('-', 3)[2];
+    attrs = ["name", "description", "max_size"]; //FIXME: handle dates
+    a_chg = Array();
+    for (k in attrs) {
+      v = my_filter(attrs[k], aid);
+      if (v !== undefined) {
+        a_chg.push(v)
+      }
     }
-    var hide_it = true;
-    if (pattern.length > 0) {
-      $( this ).find("input[name^='name-old-'").each(function() {
-        var name = $( this ).val().toUpperCase();
-        if ( name.indexOf(pattern) > -1 ) {
-	  hide_it = false;
-        }
-      });
-      $( this ).find("input[name='course'").each(function() {
-        var name = $( this ).val().toUpperCase();
-        if ( name.indexOf(pattern) > -1 ) {
-	  hide_it = false;
-        }
-      });
-    } else {
-      hide_it = false;
-    }
-    if (hide_it) {
-      $( this ).hide();
-    } else {
-      $( this ).show();
+    if (a_chg.length) {
+      changes.push({ "assignment_id": aid, "changes": a_chg })
     }
   });
+  $("#id_change_log").val(JSON.stringify( {
+    'user_id': {{ user.id }},
+    'delete_ids': $.map($("[id^=dustbin-]"), function (k, v) { if ($(k).prop("checked")) { return $(k).attr('id').split('-', 2)[1] } }),
+    'changes': changes
+  }));
 });
 // loop over all linked datetime picker widgets
 document.querySelectorAll('[id^="linkedPickers1-"]').forEach(function(linkedPicker1Element) {
