--- a/kooplexhub/education/templates/assignment_new.html
+++ b/kooplexhub/education/templates/assignment_new.html
@@ -3,7 +3,7 @@
 {% load render_table from django_tables2 %}
 {% load extras %}
 
-{% block child_head %}
+{% block head_content %}
 <!-- datetime picker requirements -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.2/dist/umd/popper.min.js"
       crossorigin="anonymous"></script>
