--- a/kooplexhub/education/templates/assignment_configure.html
+++ b/kooplexhub/education/templates/assignment_configure.html
@@ -3,7 +3,7 @@
 {% load render_table from django_tables2 %}
 {% load extras %}
 
-{% block child_head %}
+{% block head_content %}
 <!-- datetime picker requirements -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.2/dist/umd/popper.min.js"
       crossorigin="anonymous"></script>
@@ -28,12 +28,10 @@
       {% csrf_token %}
         {% apply_cancel with icon_apply="bi bi-save" %}
       <table class="mt-3">{{ form.as_table }}</table>
-      <div>
-        {% render_table form.t_assignments %}
-      </div>
+      {% render_table form.t_assignments %}
     </form>
   {% else %}
-  FIXME: empty
+    {% include 'empty.html' with empty_body='You have not defined any assignments yet.' skip_border=True %}
   {%endif %}
 </div>
 {% endblock %}
@@ -50,7 +48,7 @@ function my_filter(obj, obj_id, convert) {
       return { "attribute": obj, "value": obj_val };
     }
   }
-  if ((obj_val !== undefined) && (obj_val.length > 0) && (obj_val != old_val)) {
+  if (obj_val != old_val) {
     return { "attribute": obj, "value": obj_val };
   }
 }
@@ -59,8 +57,8 @@ $("#assignment-form-configure").submit(function (e) {
   changes = Array();
   $("input[name^=name-old-]").each(function() {
     aid = $( this ).attr('id').split('-', 3)[2];
-    attrs = ["name", "description", "max_size", "remove_collected"]; //FIXME: handle dates
-    attr_tp = ["str", "str", "str", "bool"]; //FIXME: handle dates
+    attrs = ["name", "description", "max_size", "remove_collected", "valid_from", "expires_at"]; //FIXME: handle dates
+    attr_tp = ["str", "str", "str", "bool", "timestamp", "timestamp"]; //FIXME: handle dates
     a_chg = Array();
     for (k in attrs) {
       v = my_filter(attrs[k], aid, attr_tp[k]);
@@ -115,7 +113,7 @@ document.querySelectorAll('[id^="linkedPickers1-"]').forEach(function(linkedPick
   const id_model = linkedPicker1Element.id.replace('linkedPickers1-', "");
   const old_val = document.getElementById("valid_from-old-" + id_model).value;
   if (old_val.length) {
-	var DateTimeVal1 = moment(old_val, 'YYYY-MM-DD HH:mm').toDate();
+	var DateTimeVal1 = moment(old_val, 'MM/DD/YYYY, HH:mm').toDate();
         linked1.dates.setValue(tempusDominus.DateTime.convert(DateTimeVal1));
 	console.log(linked1.dates);
   }
@@ -147,7 +145,7 @@ document.querySelectorAll('[id^="linkedPickers1-"]').forEach(function(linkedPick
   const old_val2 = document.getElementById("expires_at-old-" + id_model).value;
   if (old_val2.length) {
 	  console.log(old_val2);
-	var DateTimeVal2 = moment(old_val2, 'YYYY-MM-DD HH:mm').toDate();
+	var DateTimeVal2 = moment(old_val2, 'MM/DD/YYYY, HH:mm').toDate();
         linked2.dates.setValue(tempusDominus.DateTime.convert(DateTimeVal2));
   }
   
