--- a/kooplexhub/education/templates/assignment_handle.html
+++ b/kooplexhub/education/templates/assignment_handle.html
@@ -4,6 +4,38 @@
 {% load extras %}
 
 {% block assignment_content %}
+<div class="tab-pane fade {% if active == "handle" %}show active{% endif %} py-3" id="handleAssignment" role="tabpanel" aria-labelledby="tab-handle">
+  {% if form.okay %}
+    <form id='assignment-form-handle' class="" action="{% url 'education:assignment_handle' %}" method="post">
+      {% csrf_token %}
+      {% apply_cancel with icon_apply="bi bi-save" %}
+      <table class="mt-3">{{ form.as_table }}</table>
+      {% render_table t_mass_all %}
+    </form>
+  {% else %}
+    {% include 'empty.html' with empty_body='You have not defined any assignments yet.' skip_border=True %}
+  {% endif %}
+</div>
+{% endblock %}
+
+{% block child_scripts %}
+<script>
+{# catch submit event, in order to see what is changed #}
+$("#assignment-form-handle").submit(function (e) {
+	console.log("keccs")
+  $("#id_change_log").val(JSON.stringify( {
+    'user_id': {{ user.id }}
+  }));
+});
+</script>
+{% endblock %}
+{% comment %}
+{% extends "assignment.html" %}
+
+{% load render_table from django_tables2 %}
+{% load extras %}
+
+{% block assignment_content %}
 <div class="tab-pane fade {% if active == "handle" %}show active{% endif %}" id="Assignment" role="tabpanel" aria-labelledby="tab-handle">
   <div class="mt-3">
     {% if d_course_assignments|length > 0 %}
@@ -31,7 +63,7 @@
         </div>
       </form>
     {% else %}
-      {% include 'empty.html' with empty_body='You have not defined any assignments yet.' skip_border=True %}
+      {% include 'empty.html' with empty_body='<p class="text-light">You have not defined any assignments yet.</p>' skip_border=True %}
     {% endif %}
     <form id='assignment-form-mass' class="mb-3 mt-3" action="{% url 'education:assignment_mass_handle' %}" method="post">
       {% csrf_token %}
@@ -130,3 +162,4 @@ $("textarea[id^='feedback_text-'").on("change", function() {
 });
 </script>
 {% endblock %}
+{% endcomment %}
