--- a/kooplexhub/hub/templates/static/common.css
+++ b/kooplexhub/hub/templates/static/common.css
@@ -8,6 +8,11 @@ body {
   box-shadow: inset 0 1px 1px gray, 0 0 8px gray;
 }
 
+.form-select:focus {
+  border-color: gray;
+  box-shadow: inset 0 1px 1px gray, 0 0 8px gray;
+}
+
 .mytab{
   color: rgb(196, 196, 196);
 }
